--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=spring-security-project-for-hotel
+
+server.port=8083
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hotelsecurity?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+#jpa vendor adapter configurations
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
