--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.security.user.name=hesh
-spring.security.user.password=1234
+#spring.security.user.name=hesh
+#spring.security.user.password=1234
