change the db connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,35 @@
 spring.application.name=spring-security-project-for-hotel
 
 server.port=8083
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://localhost:3306/hotelsecurity?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/hotelsecurity?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 #jpa vendor adapter configurations
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
 
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #spring.security.user.name=hesh
 #spring.security.user.password=1234
+
+
+#----------------------------RAILWAY-------------------------
+# MySQL connection details (from Railway MySQL plugin)
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:48516/railway
+spring.datasource.username=root
+spring.datasource.password=gibPDRLwaAIdaXAmuFEvLSIjwbHjjYHW
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.show-sql=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
