--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#BACKEND HOSTED URL - "https://hotel-management-server-production.up.railway.app"
