--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,12 @@ spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #BACKEND HOSTED URL - "https://hotel-management-server-production.up.railway.app"
+
+#------------------------------E-mail Service Configuration-------------------------
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
